--- a/style.css
+++ b/style.css
@@ -67,3 +67,70 @@ body{
     box-shadow: inset -140px 0px 0px #104fb4;
     transition: 285ms;
 }
+
+.contact-us{
+    box-shadow: 0px 0px 0px 5px var(--txt-color);
+    padding: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: transparent;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding-left: 65px;
+    padding-right: 65px;
+}
+@keyframes mailer{
+    0%{
+        transform: scale(-1);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+.contact-headline{
+    display: block;
+    text-align: center;
+    color: var(--txt-color);
+    font-size: 40px;
+    text-transform: uppercase;
+}
+.form-index{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.input-box{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--txt-color);
+    padding: 10px;
+    font-size: 16px;
+    color: var(--txt-color);
+    background-color: transparent;
+    margin-top: 40px;
+    width: 400px;
+}
+::placeholder{
+    font-size: 16px;
+    color: var(--txt-color);
+}
+.submit-button{
+    border: none;
+    outline: none;
+    border: 1px solid whitesmoke;
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 10px;
+    color: whitesmoke;
+    margin-top: 50px;
+    background-color: var(--txt-color);
+    padding-left: 50px;
+    padding-right: 50px;
+}
