--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    box-shadow: 0px 0px 0px 1px rgb(146, 146, 146);
    
 }
 .contact-header{
@@ -166,6 +167,9 @@ body{
      display: flex;
      align-items: flex-start;
      flex-direction: column;
+    text-align: center;
+    font-size: 40px;
+    text-transform: uppercase;
 
 }
 .form-margin{
@@ -177,9 +181,12 @@ body{
     font-size: 18px;
     margin-top: -30px;
 }
-.hed-line p{
+.hed-line p,.fa-envelope{
     margin-left: 50px;
     text-transform: none;
+}
+.fa-envelope{
+    margin-top: 100px;
 }
 
 .body-animation{
@@ -204,14 +211,19 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 .footer{
     position: fixed;
     bottom: 0px;
-    background-color: white;
+    background: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     width: 100%;
+    box-shadow: 0px 0px 0px 1px rgb(146, 146, 146);
 }
 .f-icon{
     font-size: 25px;
+
+}
+#create-acc{
+    color:var(--txt-color)
 }
