--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
 .header-index{
     width: 100%;
     background-color: var(--bg-color);
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -247,4 +247,74 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
 input[type="file"] {
    display: none;
+}
+.body-context{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 50px;
+}
+.set-class{ 
+    width: 500px;
+    background:  rgba(255, 255, 255, 0.8); 
+    border-radius: 13px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 20px;
+    margin-top: 30px;
+}
+.margin-file{
+    margin-top: 0px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.proile-image{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border:1px solid var(--txt-color)
+}
+.user-logged-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#usernamename{
+    margin-right: 10px;
+    color:var(--txt-color)
+}
+
+.setting-button{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    width: 100%;
+    text-align: left;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.flex-down{
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0px;
+    padding: 10px;
+}
+.delete{
+    color: red;
+}
+.top-mrg{
+    margin-top: 0px;
 }
