--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
+
+
 body{
     padding: 0px;
     margin: 0px;
@@ -60,6 +62,10 @@ body{
     width: 100%; 
     left: 0; 
   }
+
+  .hover-red:hover{
+    background-color: darkred;
+}
 .header-contact{
     font-size: 20px;
     text-decoration: none;
@@ -664,6 +670,7 @@ justify-content: flex-start;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 80%;
 }
 
 
