--- a/style.css
+++ b/style.css
@@ -518,7 +518,9 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
 
 
-
+.nat{
+    display: none;
+}
 @media only screen and (max-width:700px) {
 
     .set-class{
