--- a/style.css
+++ b/style.css
@@ -943,7 +943,7 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
  /*------------chating*/ 
 #chat-box{
-    width: 100%;
+    width: 550px;
     background:  rgba(255, 255, 255, 0.9);
     color: white;
     height: calc(100vh - 160px);
@@ -951,7 +951,9 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
     padding-bottom: 10px;
     overflow-x: hidden;
     position: relative;
-    top: 40px;z-index: 1;
+    top: 43px;z-index: 1;
+    margin-left: auto;
+ margin-right: auto;
    
 }
 .text-box-div{
@@ -1081,12 +1083,13 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
 
 .wrapper{
- width: 550px;
+ width: 100%;
 z-index: 1;
  margin-left: auto;
  margin-right: auto;
  height: calc(100vh - 101px);
  margin-bottom: 100px;
+ 
 }
 
 .show{
@@ -1094,11 +1097,11 @@ z-index: 1;
 }
 
 .header-chat{
-    height: 40px;
+    height: 43px;
     background-color: red;
     position: fixed;
     top: 0px;
-    width: 550px;
+    width: 100%;
     z-index: 2;
 }
 .a-style{
@@ -1222,4 +1225,10 @@ z-index: 1;
 .s-style{
   display: flex;
   z-index: 3;
+}
+
+.sent-image{
+    width: 260px;
+    height: auto;
+    border-radius: 20px;
 }
