--- a/style.css
+++ b/style.css
@@ -325,6 +325,12 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
     align-items: center;
     font-size: 20px;
     margin-top: 30px;
+ 
+}
+
+
+.x-margin{
+    background-color: red;
 }
 .margin-file{
     margin-top: 0px;
@@ -365,13 +371,15 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex-start;        
 }
+
 .flex-down{
     flex-direction: column;
     justify-content: flex-start;
     padding: 0px;
     padding: 10px;
+    padding-top: 0px;
 }
 .delete{
     color: red;
@@ -966,40 +974,46 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 
 .text-field{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 7%;
     background:  rgba(255, 255, 255, 1);
 }
 .input-message-to-client{
-    border-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
     background-color: transparent;
     border: 1px solid grey;
-    height: 26px;
-    width: 50%;
+    height: 20px;
+    width: 70%;
     outline: none;
     padding-top: 7px;
     padding-bottom: 7px;
     font-size: 20px;
     padding-left: 10px;
+    border-right: none;
 }
 .send-message-to-client-button{
-    border-radius: 30px;
     background-color: transparent;
     border: 1px solid grey;
-    font-size: 14px;
-    padding: 4px;
-    width: 100px;
+   
+
+    width: 70px;
     margin-left: -30px;
-    font-weight: 900;
+    font-weight: 700;
     background: linear-gradient(to right, #333399 0%, #ff00cc 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+    border-left: none;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    padding-top:6px;
+    padding-bottom: 6px;
+    font-size:19px;
+    cursor: pointer;
+    text-align: center;
 
-    padding-top: 7px;
-    padding-bottom: 7px;
-    font-size:18px;
 }
 
 .input-message-to-client:active,.input-message-to-client:focus,.send-message-to-client-button:focus{
@@ -1050,9 +1064,7 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
 .my-message{
     margin-top: 20px;
-   
     margin-left: auto;
- 
     width: 260px;
     margin-right: 5px;
     display: flex;
@@ -1098,18 +1110,29 @@ z-index: 1;
 
 .header-chat{
     height: 43px;
-    background-color: red;
+    background:  rgba(255, 255, 255, 1);
     position: fixed;
     top: 0px;
     width: 100%;
     z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .a-style{
     display: flex;
     position: fixed;
     bottom:41px;
 }
+#sendEmojiIcon{
+    display: flex;
+}
 @media only screen and (max-width:700px) {
+
+    #sendEmojiIcon{
+        display: none;
+    }
+
 
     .set-class{
         width: 90%;
@@ -1204,6 +1227,7 @@ z-index: 1;
    
           
        }
+ 
        .x-style{
            display: none;
        }
@@ -1242,7 +1266,34 @@ z-index: 1;
     outline: none;
     color: black;
     font-size: 25px;
+    width: 0px;
+    height: 0px;
     height: 25px;
     width: 25px;
+    margin: 0px;
+    margin-left: -10px;
+}
+.fa-image{
+    margin-left: 0px;
 }
 
+.send-message-x-field{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.group-name{
+    font-size: 22px;
+    color: black;
+    margin-left: 20px;
+
+}
+
+.fa-edit{
+    margin-right: 20px;
+}
