--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background-color: var(--bg-color);
     padding-top: 4px;
     padding-bottom: 4px;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -663,6 +663,7 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
+
 .new-flex{
     margin-top: 60px;
 }
@@ -1296,4 +1297,52 @@ z-index: 1;
 
 .fa-edit{
     margin-right: 20px;
+}
+
+.swiper-container{
+    width: 350px;
+    height: 140px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    margin-bottom: -30px;
+    margin-top: 50px; 
+    display: flex;
+    z-index: 1;
+}
+
+.swiper-slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90px;
+    margin-top: 10px;
+}
+
+.border-frame{
+    height: 90px;
+    width: 90px;
+    background: linear-gradient(to left, #333399, #ff00cc);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.white-frame{
+    height: 80px;
+    width: 80px;
+    background: rgba(255, 255, 255, 0.8); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.story-image{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+
+    background-size: cover;
 }
