--- a/style.css
+++ b/style.css
@@ -1301,13 +1301,14 @@ z-index: 1;
 
 .swiper-container{
     width: 350px;
-    height: 140px;
+    height:110px;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
-    margin-bottom: -30px;
+    margin-bottom: -40px;
     margin-top: 50px; 
     display: flex;
     z-index: 1;
+    border: 1px solid grey;
 }
 
 .swiper-slide{
@@ -1315,13 +1316,13 @@ z-index: 1;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 90px;
-    margin-top: 10px;
+    width: 70px;
+    margin-top: 5px;
 }
 
 .border-frame{
-    height: 90px;
-    width: 90px;
+    height: 72px;
+    width: 72px;
     background: linear-gradient(to left, #333399, #ff00cc);
     display: flex;
     justify-content: center;
@@ -1330,8 +1331,8 @@ z-index: 1;
 }
 
 .white-frame{
-    height: 80px;
-    width: 80px;
+    height: 66px;
+    width: 66px;
     background: rgba(255, 255, 255, 0.8); 
     display: flex;
     justify-content: center;
@@ -1340,9 +1341,20 @@ z-index: 1;
 }
 
 .story-image{
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
-
     background-size: cover;
+}
+
+.story-username{
+    font-size: 12px;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 80px;
+    display: block;
+    text-overflow: ellipsis;
+    text-align: center;
+    margin-top: 5px;
 }
